# ODM

open_download_manager/: ._target  Cargo.toml  config.toml
open_download_manager/src/: config.rs  libs.rs  main.rs
open_download_manager/src/core/: manager.rs
open_download_manager/src/download/: file.rs  manager.rs  mod.rs  progress.rs  segment.rs  single.rs
open_download_manager/src/state/: metadata.rs
open_download_manager/tests/: core_manager_tests.rs
