[package]
name = "open_download_manager"
version = "0.1.0"
edition = "2024"

[lib]
name = "open_download_manager"
path = "src/libs.rs"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
ctrlc = "3.2"